/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "dolittle/interaction/events.relativity/committed_event_stream.proto";
import "dolittle/interaction/events.relativity/execution_context.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction.Protobuf";

// Represents a committed event stream with the Execution Context
message CommittedEventStreamWithContext {
    CommittedEventStream commit = 1;
    ExecutionContext context = 2;
}